--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./src/index.js",
-    "app": "nodemon ./src/index.js"
+    "app": "nodemon ./src/index.js",
+    "test":"jest"
   },
   "engines": {
     "node": "v8.10.0"
@@ -29,6 +30,7 @@
     "validator": "^13.0.0"
   },
   "devDependencies": {
+    "jest": "^25.3.0",
     "nodemon": "^2.0.2"
   }
 }
